--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,19 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.js",
+      "src": "app.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/api/index.js"
+      "dest": "/app.js"
     }
-  ]
+  ],
+  "functions": {
+    "app.js": {
+      "includeFiles": ["views/**", "public/**", "routes/**", "utils/**"]
+    }
+  }
 }
