Revert "Update vercel.json"
This reverts commit e98696095fb8f83a44e889ea34554d7ab982bb25.

--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
   ],
   "functions": {
     "app.js": {
-      "includeFiles": "**"
+      "includeFiles": ["views/**", "public/**", "routes/**", "utils/**"]
     }
   }
 }
