Revert "Update vercel.json"
This reverts commit b4899ba00c1a6a0f3fef6e0c14ba25ca0fd8eeec.

--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "app.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/app.js"
+      "dest": "/api/index.js"
     }
-  ],
-  "functions": {
-    "app.js": {
-      "includeFiles": ["views/**", "public/**", "routes/**", "utils/**"]
-    }
-  }
+  ]
 }
